# agent-framework-cookiecutter

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: conftest.py  test_generation.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  policies.yaml  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: auth.py  config.py  governance.py  middleware.py  orchestrator.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/agents/: __init__.py  conversational.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/interfaces/: __init__.py  cli.py  mcp_server.py  server.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/knowledge/: __init__.py  provider.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/memory/: __init__.py  provider.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/providers/: __init__.py  model.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/tools/: __init__.py  async_api.py  base.py  data_service.py  logic_service.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/utils/: __init__.py  errors.py  history.py  logging.py  rate_limiting.py  schemas.py  tracing.py  uploads.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_agent.py  test_errors.py  test_governance.py  test_history.py  test_logging.py  test_middleware.py  test_rate_limiting.py  test_tracing.py
{{cookiecutter.project_slug}}/tests/evals/: __init__.py  azure_evaluators.py  base.py  conftest.py  test_response_quality.py
{{cookiecutter.project_slug}}/tests/evals/datasets/: eval_cases.jsonl
